RESOLVED FIXED214391
Should clear exception after microtask draining
https://bugs.webkit.org/show_bug.cgi?id=214391
Summary Should clear exception after microtask draining
Yusuke Suzuki
Reported 2020-07-15 18:07:24 PDT
Should clear exception after microtask draining
Attachments
Patch (5.27 KB, patch)
2020-07-15 18:09 PDT, Yusuke Suzuki
no flags
Yusuke Suzuki
Comment 1 2020-07-15 18:09:43 PDT
Yusuke Suzuki
Comment 2 2020-07-15 18:09:45 PDT
Mark Lam
Comment 3 2020-07-15 18:15:00 PDT
Comment on attachment 404412 [details] Patch r=me
EWS
Comment 4 2020-07-15 23:33:00 PDT
Committed r264447: <https://trac.webkit.org/changeset/264447> All reviewed patches have been landed. Closing bug and clearing flags on attachment 404412 [details].
Note You need to log in before you can comment on or make changes to this bug.