Should clear exception after microtask draining https://bugs.webkit.org/show_bug.cgi?id=214391 <rdar://problem/65536227>

Reviewed by Mark Lam.

Source/WebCore:

Test: js/dom/microtask-drain-should-clear-exceptions.html

Since microtask draining involves JS calls, potentially it can cause exception.
We should clear exceptions after microtask draining since we do not handle it and suppress exception-check validation.
And we also should not create ThrowScope in canAccessDocument when parameter says it never throws an error.
Both cases are handled in the attached test.

* bindings/js/JSDOMBindingSecurity.cpp:
(WebCore::canAccessDocument):
* bindings/js/JSExecState.h:
(WebCore::JSExecState::~JSExecState):

LayoutTests:

* js/dom/microtask-drain-should-clear-exceptions-expected.txt: Added.
* js/dom/microtask-drain-should-clear-exceptions.html: Added.


Canonical link: https://commits.webkit.org/227198@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@264447 268f45cc-cd09-0410-ab3c-d52691b4dbfc